2001-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/nnheader.el (mm-multibyte-string-p): Alias to
	`multibyte-string-p' or `ignore'.

2001-12-09  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu-summary-buffer-name): New
	advice.

	* lisp/gnus-namazu.el (top): Update comments.
	(gnus-namazu-indexed-servers): Abolished.
	(gnus-namazu-index-directories, gnus-namazu-command): Changed the
	default value.
	(gnus-namazu/group-name-regexp): New internal constant.
	(gnus-namazu/indexed-servers): New function.
	(gnus-namazu/setup): Not initialize `gnus-namazu-indexed-servers'.
	Add the entry for ephemeral groups generated by
	`gnus-namazu-search' to `gnus-group-name-charset-group-alist'.
	(gnus-namazu/group-prefixed-name): Fix.
	(gnus-namazu/search): Stricten checking the return value of
	`gnus-namazu/call-namazu'.  Install changes in order to avoid the
	difference between regexp-opt module of FSF Emacs and one of XEmacs.
	(gnus-namazu/get-target-groups, gnus-namazu/get-current-query):
	Refer `gnus-namazu/group-name-regexp'.
	(gnus-namazu-search): Slightly modified.

2001-12-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* lisp/message.el (message-mimic-kill-buffer): Bind
	`message-kill-buffer-and-remove-file' to nil while calling the
	function `message-kill-buffer'.

	* texi/message-ja.texi, texi/message-ja.texi: Update.

	* lisp/lpath.el: Fbind `replace-regexp-in-string' for XEmacs and
	Mule; don't fbind coding-system-list for Mule.

2001-12-03  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
	(cf. news://news.gnus.org/gnus.gnus-bug #48523)

	* lisp/message.el (message-kill-buffer-and-remove-file): New user
	option.
	(message-kill-buffer): Don't remove the backup file if
	`message-kill-buffer-and-remove-file' is nil.

2001-12-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* lisp/gnus-namazu.el (gnus-namazu-case-sensitive-filesystem): New
	option.
	(gnus-namazu/group-alist): New internal variable.
	(gnus-namazu/setup): Initialize it.