@@ -1,3 +1,11 @@
+2001-12-10  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>
+
+	* lisp/gnus-namazu.el (gnus-namazu-summary-buffer-name): Changed
+	the expression to decide whether `gnus-summary-buffer-name' should
+	be advised.
+	(gnus-namazu/setup): Strict checking the other Gnus variants than
+	Oort-Gnus before handling `gnus-group-name-charset-group-alist'.
+
 2001-12-09  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* lisp/nnheader.el (mm-multibyte-string-p): Alias to
